--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
 	"description": "",
 	"main": "app.js",
 	"scripts": {
-		"start": "nodemon server.js",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"start:dev": "nodemon server.js",
+		"start:prod": "NODE_ENV=production nodemon server.js"
 	},
 	"repository": {
 		"type": "git",
@@ -18,6 +18,7 @@
 	},
 	"homepage": "https://github.com/agg-geek/natours#readme",
 	"dependencies": {
+		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
 		"morgan": "^1.10.0"
 	}
