--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "app.js",
 	"scripts": {
-		"start:dev": "nodemon server.js",
+		"start": "nodemon server.js",
 		"start:prod": "NODE_ENV=production nodemon server.js"
 	},
 	"repository": {
@@ -20,6 +20,7 @@
 	"dependencies": {
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
+		"mongoose": "^8.0.4",
 		"morgan": "^1.10.0"
 	}
 }
