--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
 		"mongoose": "^8.0.4",
-		"morgan": "^1.10.0"
+		"morgan": "^1.10.0",
+		"slugify": "^1.6.6"
 	}
 }
