--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"express": "^4.18.2",
 		"mongoose": "^8.0.4",
 		"morgan": "^1.10.0",
-		"slugify": "^1.6.6"
+		"slugify": "^1.6.6",
+		"validator": "^13.11.0"
 	}
 }
