--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
 	"dependencies": {
 		"bcryptjs": "^2.4.3",
 		"dotenv": "^16.3.1",
+		"ejs": "^3.1.9",
+		"ejs-mate": "^4.0.0",
 		"express": "^4.18.2",
 		"express-mongo-sanitize": "^2.2.0",
 		"express-rate-limit": "^7.1.5",
