--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
 	"scripts": {
 		"start": "nodemon server.js",
 		"start:prod": "NODE_ENV=production nodemon server.js",
-		"debug": "ndb server.js"
+		"debug": "ndb server.js",
+		"watch:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js",
+		"build:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js"
 	},
 	"repository": {
 		"type": "git",
@@ -19,6 +21,8 @@
 	},
 	"homepage": "https://github.com/agg-geek/natours#readme",
 	"dependencies": {
+		"@babel/polyfill": "^7.12.1",
+		"axios": "^1.6.5",
 		"bcryptjs": "^2.4.3",
 		"cookie-parser": "^1.4.6",
 		"dotenv": "^16.3.1",
@@ -29,11 +33,15 @@
 		"helmet": "^7.1.0",
 		"hpp": "^0.2.3",
 		"jsonwebtoken": "^9.0.2",
+		"mapbox-gl": "^3.1.0",
 		"mongoose": "^8.0.4",
 		"morgan": "^1.10.0",
 		"nodemailer": "^6.9.8",
 		"slugify": "^1.6.6",
 		"validator": "^13.11.0",
 		"xss-clean": "^0.1.4"
+	},
+	"devDependencies": {
+		"parcel-bundler": "^1.12.5"
 	}
 }
