--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"mapbox-gl": "^3.1.0",
 		"mongoose": "^8.0.4",
 		"morgan": "^1.10.0",
+		"multer": "^1.4.5-lts.1",
 		"nodemailer": "^6.9.8",
 		"slugify": "^1.6.6",
 		"validator": "^13.11.0",
