--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"morgan": "^1.10.0",
 		"multer": "^1.4.5-lts.1",
 		"nodemailer": "^6.9.8",
+		"sharp": "^0.33.2",
 		"slugify": "^1.6.6",
 		"validator": "^13.11.0",
 		"xss-clean": "^0.1.4"
