--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"cookie-parser": "^1.4.6",
 		"dotenv": "^16.3.1",
 		"ejs": "^3.1.9",
+		"ejs-mate": "^4.0.0",
 		"express": "^4.18.2",
 		"express-mongo-sanitize": "^2.2.0",
 		"express-rate-limit": "^7.1.5",
