--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"express-rate-limit": "^7.1.5",
 		"helmet": "^7.1.0",
 		"hpp": "^0.2.3",
+		"html-to-text": "^9.0.5",
 		"jsonwebtoken": "^9.0.2",
 		"mapbox-gl": "^3.1.0",
 		"mongoose": "^8.0.4",
