--- a/package.json
+++ b/package.json
@@ -1,25 +1,26 @@
 {
-	"name": "natours",
+	"name": "wanderquest",
 	"version": "1.0.0",
 	"description": "",
 	"main": "app.js",
 	"scripts": {
 		"start": "nodemon server.js",
 		"start:prod": "NODE_ENV=production nodemon server.js",
+		"seed": "node seeds/seed.js",
 		"debug": "ndb server.js",
 		"watch:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js",
 		"build:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js"
 	},
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/agg-geek/natours.git"
+		"url": "git+https://github.com/agg-geek/wanderquest.git"
 	},
 	"author": "Abhinav Aggarwal",
 	"license": "ISC",
 	"bugs": {
-		"url": "https://github.com/agg-geek/natours/issues"
+		"url": "https://github.com/agg-geek/wanderquest/issues"
 	},
-	"homepage": "https://github.com/agg-geek/natours#readme",
+	"homepage": "https://github.com/agg-geek/wanderquest#readme",
 	"dependencies": {
 		"@babel/polyfill": "^7.12.1",
 		"axios": "^1.6.5",
