--- a/api/package.json
+++ b/api/package.json
@@ -2,23 +2,23 @@
 	"name": "wanderquest",
 	"version": "1.0.0",
 	"description": "",
-	"main": "app.js",
+	"main": "server.js",
 	"scripts": {
-		"start": "nodemon server.js",
-		"start:prod": "NODE_ENV=production nodemon server.js",
+		"start": "node server.js",
+		"start:prod": "NODE_ENV=production node server.js",
 		"seed": "node seeds/seed.js",
 		"debug": "ndb server.js"
 	},
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/agg-geek/wanderquest.git"
+		"url": "git+https://github.com/itsraakhi/wanderquest.git"
 	},
-	"author": "Abhinav Aggarwal",
+	"author": "Raakhi Prajapati",
 	"license": "ISC",
 	"bugs": {
-		"url": "https://github.com/agg-geek/wanderquest/issues"
+		"url": "https://github.com/itsraakhi/wanderquest/issues"
 	},
-	"homepage": "https://github.com/agg-geek/wanderquest#readme",
+	"homepage": "https://github.com/itsraakhi/wanderquest#readme",
 	"dependencies": {
 		"@babel/polyfill": "^7.12.1",
 		"axios": "^1.6.5",
