--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "server.js",
 	"scripts": {
-		"start": "node server.js",
+		"start": "nodemon server.js",
 		"start:prod": "NODE_ENV=production node server.js",
 		"seed": "node seeds/seed.js",
 		"debug": "ndb server.js"
